welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:4: error: Missing closing brace `}' assumed here
for (compteur <- 1 to 7*4) {
^