welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
/*pour un coté, il faut faire quatre pas en avant, deux pas à gauche, quatre pas à droite,
deux pas à droite, et quatre pas à gauche. Il faut faire 7 tours de circuit.*/
for (compteur <- 1 to 7*4) {
	for (compteur <- 1 to 4) {
		avance();
		gauche();
/*		avance();
		avance();
		droite();
		for (compteur <- 1 to 4) {
			avance();
			gauche();
			for (compteur <- 1 to 4) {
				avance();
			}
			
		}
		
	}
}*/
